# insighthunter-v3

./: .dev.vars  .env  .gitignore  CLOUDFLARE_UPGRADE_SUMMARY.md  CNAME  README.md  client-management-worker.js  debug-deploy.ps1  deploy-frontend.ps1  eslintrc.json  index.html  install-insighthunter-complete.sh  package-lock.json  package.json  reorg.sh  repo-restructure.sh  repo.sh  setup-cloudflare.sh  setup.sh  structure.txt  tsconfig.json  wrangler-cloudflare.toml  wrangler.json  wrangler.toml
.devcontainer/: Dockerfile  README.md  api-tests.http  devcontainer.json
Ccc/ccc/: MANIFEST.in  README.md  setup.cfg  setup.py
Ccc/ccc/ccc/: __init__.py  __main__.py  ccc.c
Ccc/ccc/ccc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Ccc/ccc/docs/: conf.py  index.rst  reference.rst
NOTUSEDONBOARD/: OnboardingWelcome.tsx
backend/: database.sqlite  package-lock.json  package.json  tsconfig.json  wrangler.toml
database/: d1-Schema.sql  schema.sql
docs/: BUILD-SUMMARY.md  CLOUDFLARE_ARTIFACTS_LIST.md  DURABLE_OBJECTS_USEAGE.md  TECHNICAL_SPECIFICATIONS_CF.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
hello-ai/: package-lock.json  package.json  wrangler.jsonc
insight-hunter-backend/: package-lock.json  package.json  tsconfig.json  wrangler.toml
insight-hunter-frontend/: package.json  rename  tsconfig.json  vite.config.ts  wrangler.toml
literature/: CLOUDFLARE_ARCHITECTURE.md  TECHNICAL_SPECIFICATIONS_CF.md
onboarding/: README.md  index.html  package-lock.json  package.json  tsconfig.json  (+2 more)
(+319 files in other folders)
