[metadata]
name = ccc
version = 1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmichaelh/CoolCashCars
author = 
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = ccc
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    ccc=ccc:main
[build_ext]
inplace = 1
